tdf#168478 - Use the previously found range rather than returning an empty one

During the reset of a standard filter, if the correct boundaries are not
selected, do not return an empty range. Instead, reuse the previously
found range at the selection.

Change-Id: I42a603a8a284036710b608a519abd781b90991e1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/191245
Tested-by: Jenkins
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>
Tested-by: Xisco Fauli <xiscofauli@libreoffice.org>